--- a/ld48/index.html
+++ b/ld48/index.html
@@ -8,9 +8,19 @@
     <link href='css/style.css' rel='stylesheet'>
   </head>
   <body>
+    <img id="background-img" src="img/background.png"/>
+    <img id="flag" src="img/flag.png"/>
+    <img id="board" src="img/board.png"/>
+    <img id="instructions" src="img/instructions.png"/>
+    <img id="ui" src="img/ui.png"/>
+    <img id="pants" src="img/pants.png"/>
     <div>
       <canvas id='game'></canvas>
+      <p id='info'></p>
     </div>
+    <!-- from http://www.soundjay.com/applause-sounds-1.html -->
+    <audio src="sounds/applause.mp3">
+    </audio>
     <script src='js/app.js'></script>
   </body>
 </html>
