--- a/mm/index.html
+++ b/mm/index.html
@@ -315,6 +315,13 @@ Y2hpbGQgIHsgbWFyZ2luLWJvdHRvbTogMDsgfQo=
     </div>
 
     <div class="slide">
+      <h1>Rat Detection API</h1>
+      <div class="center">
+        <iframe width="420" height="315" src="//www.youtube.com/embed/aKyC46cpWbA" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
+
+    <div class="slide">
       <h1>Rat Detection API - no drugs</h1>
       <div class="center">
         <img src="none/0.png" />
